# C-Memory-Allocator

./: CMakeLists.txt  LICENSE  README.md  ReadME-casestudy.md  bench_pool.cpp  example_types.hpp  pool_manager.hpp  pool_ptr(1).hpp  test_pool.cpp  thread_policy.hpp
